# cf-ensemble

./: .gitignore  404.html  INSTALL.md  README.md  README_DOCS.md  RESULTS_2026-01-24.md  environment-runpod.yml  environment.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
INSTALL/: index.html
QUICK_REFERENCE/: index.html
archive/: README.md  cf.py  common.py
archive/tests/: README.md
data/: README.md
docs/: QUICK_REFERENCE.md  README.md  examples_README.md  examples_confidence_weighting_README.md  index.md
docs/failure_modes/: README.md  aggregator_weight_collapse.md  als_approximation_vs_exact_optimization.md  optimization_instability.md  transductive_vs_inductive.md
docs/guides/: README.md  mkdocs_quick_reference.md
docs/methods/: QUICK_REFERENCE.md  README.md  als_mathematical_derivation.md  als_vs_pytorch.md  cf_ensemble_optimization_objective_tutorial.md  hyperparameter_tuning.md  imbalanced_data_tutorial.md  knowledge_distillation_tutorial.md
docs/notebooks/: README.md
docs/results/: RESULTS_2026-01-24.md
docs/stylesheets/: extra.css
examples/: index.html
examples/advanced/: README.md
failure_modes/: index.html
guides/: index.html
images/: README.md
methods/: index.html
notebooks/: README.md  index.html
results/: README.md
scripts/: README.md  compare_imbalance_scenarios.py  run_tests.sh
search/: search_index.json
tests/: README.md  __init__.py  test_aggregators.py  test_als.py  test_confidence.py  test_ensemble_data.py  test_losses.py  test_pytorch_gd.py  test_reliability_model.py  test_trainer.py
(+98 files in other folders)
