[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cfensemble"
version = "0.1.0"
description = "Meta-learning via Latent-Factor-Based Collaborative Filtering for Ensemble Classification"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "cfensemble", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.24"
pandas = ">=2.0"
scipy = ">=1.11"
scikit-learn = ">=1.3"
matplotlib = ">=3.8"
seaborn = ">=0.13"
tqdm = ">=4.66"
implicit = ">=0.7.0"
scikit-surprise = ">=1.1"

[tool.poetry.group.optimization.dependencies]
# Optional: PyTorch for GPU-accelerated gradient descent (alternative to ALS)
torch = {version = ">=2.1", optional = true}

[tool.poetry.group.experiment.dependencies]
tensorboard = ">=2.15"
mlflow = ">=2.10"
wandb = {version = ">=0.16", optional = true}

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29"
jupyter = ">=1.0"
pytest = ">=8.0"
black = ">=24.0"
ruff = ">=0.3"
mypy = ">=1.8"

[tool.poetry.scripts]
cfensemble-train = "cfensemble.workflows.train:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
